Change the arquillian tests to revolve around the embedded AS 6 profile.