@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <!--
   ~ JBoss, Home of Professional Open Source.
   ~ Copyright 2010, Red Hat, Inc., and individual contributors
@@ -19,86 +20,185 @@
   ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
   ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
   -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>org.switchyard.components</groupId>
-        <artifactId>switchyard-components-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
-    <groupId>org.switchyard.components</groupId>
-    <artifactId>switchyard-arquillian-tests</artifactId>
-    <version>${project.parent.version}</version>
-    <packaging>jar</packaging>
-
-    <name>SwitchYard: Arquillian Tests</name>
-    <url>http://www.switchyard.org</url>
-
-    <properties>
-<!--
-      <arquillian.version>1.0.0.Alpha4</arquillian.version>
--->
-        <arquillian.version>1.0.0-SNAPSHOT</arquillian.version>
-
-    </properties>
-
-
-    <dependencies>
-        <dependency>
-            <groupId>org.switchyard.components</groupId>
-            <artifactId>switchyard-component-bean</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.switchyard.components</groupId>
-            <artifactId>switchyard-component-soap</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.milyn</groupId>
-            <artifactId>milyn-smooks-javabean</artifactId>
-            <version>1.5-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-           <groupId>javax.enterprise</groupId>
-           <artifactId>cdi-api</artifactId>
-           <version>1.0-SP1</version>
-        </dependency>
-        <dependency>
-           <groupId>junit</groupId>
-           <artifactId>junit</artifactId>
-           <version>4.8.1</version>
-           <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.arquillian</groupId>
-          <artifactId>arquillian-junit</artifactId>
-          <version>${arquillian.version}</version>
-          <scope>test</scope>
-        </dependency>
-
-         <dependency>
-            <groupId>org.jboss.arquillian.container</groupId>
-            <artifactId>arquillian-jbossas-remote-6</artifactId>
-            <version>${arquillian.version}</version>
-         </dependency>
-        <dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.switchyard.quickstarts</groupId>
+    <artifactId>switchyard-quickstarts-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+  <groupId>org.switchyard.quickstarts</groupId>
+  <artifactId>switchyard-arquillian-tests</artifactId>
+  <version>${project.parent.version}</version>
+  <packaging>jar</packaging>
+  <name>SwitchYard: Arquillian Tests</name>
+  <url>http://www.switchyard.org</url>
+  <properties>
+    <arquillian.version>1.0.0.Alpha4</arquillian.version>
+    <jboss.version>6.0.0.Final</jboss.version>
+    <switchyard.version>${project.parent.version}</switchyard.version>
+    <!-- 
+      <arquillian.version>1.0.0-SNAPSHOT</arquillian.version>
+     -->
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.14</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
+      <version>1.0-SP1</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.arquillian</groupId>
+      <artifactId>arquillian-junit</artifactId>
+      <version>${arquillian.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+  <profiles>
+    <profile>
+      <id>jbossas-embedded-6</id>
+      <properties>
+        <jboss.home>${project.build.directory}/jboss-${jboss.version}</jboss.home>
+      </properties>
+      <dependencyManagement>
+        <dependencies>
+          <dependency>
             <groupId>org.jboss.jbossas</groupId>
-            <artifactId>jboss-as-client</artifactId>
-            <version>6.0.0.20100721-M4</version>
+            <artifactId>jboss-as-depchain</artifactId>
+            <version>${jboss.version}</version>
             <type>pom</type>
+            <scope>import</scope>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.arquillian.container</groupId>
+          <artifactId>arquillian-jbossas-embedded-6</artifactId>
+          <version>${arquillian.version}</version>
         </dependency>
-    </dependencies>
-
-    <repositories>
-        <repository>
-            <id>codehaus.m2.snapshots</id>
-            <url>http://snapshots.repository.codehaus.org</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository>
-    </repositories>
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-depchain</artifactId>
+          <version>${jboss.version}</version>
+          <type>pom</type>
+          <scope>compile</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>unpack</id>
+                <phase>generate-test-resources</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jboss.jbossas</groupId>
+                      <artifactId>jboss-as-distribution</artifactId>
+                      <version>${jboss.version}</version>
+                      <type>zip</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.build.directory}</outputDirectory>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>org.switchyard</groupId>
+                      <artifactId>switchyard-deployers-build</artifactId>
+                      <version>${switchyard.version}</version>
+                      <type>zip</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.build.directory}/jboss-${jboss.version}/server/default/deployers</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+              <execution>
+                <id>copy</id>
+                <phase>generate-test-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.switchyard.components</groupId>
+                      <artifactId>switchyard-component-bean</artifactId>
+                      <version>${switchyard.version}</version>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.build.directory}/jboss-${jboss.version}/server/default/deploy</outputDirectory>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>org.switchyard.components</groupId>
+                      <artifactId>switchyard-component-soap</artifactId>
+                      <version>${switchyard.version}</version>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.build.directory}/jboss-${jboss.version}/server/default/deploy</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+              <additionalClasspathElements>
+                <additionalClasspathElement>${jboss.home}/client/jbossws-native-client.jar</additionalClasspathElement>
+                <additionalClasspathElement>${jboss.home}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
+                <additionalClasspathElement>${jboss.home}/server/default/deployers/switchyard.deployer</additionalClasspathElement>
+              </additionalClasspathElements>
+              <trimStackTrace>false</trimStackTrace>
+              <printSummary>true</printSummary>
+              <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Djava.endorsed.dirs=${jboss.home}/lib/endorsed -Djboss.home=${jboss.home} -Djboss.boot.server.log.dir=${jboss.home} -Dorg.jboss.reflect.spi.TypeInfoFactory=org.jboss.reflect.plugins.introspection.IntrospectionTypeInfoFactory</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jbossas-remote-6</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.arquillian.container</groupId>
+          <artifactId>arquillian-jbossas-remote-6</artifactId>
+          <version>${arquillian.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-client</artifactId>
+          <version>${jboss.version}</version>
+          <type>pom</type>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+  <repositories>
+    <repository>
+      <id>codehaus.m2.snapshots</id>
+      <url>http://snapshots.repository.codehaus.org</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
 </project>
